[package]
name = "cobridge"
version = "0.1.0"
edition = "2021"
description = "WIP Cohost to ActivityPub bridge"
license = "MIT"

[dependencies]
structopt = "0.3"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
urlencoding = "2.1"
hyper-rustls = { version = "0.23.0", features = ["http2"] }
axum = { version = "0.5.17", features = ["http2"] }
tracing = "0.1"
tracing-subscriber = "0.3"
http = "0.2.8"
scraper = "0.13.0"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.3", features = ["trace"] }
